--- a/css/styles.css
+++ b/css/styles.css
@@ -228,4 +228,97 @@ main #second_section .second_section_content:nth-child(3) .second_section_conten
 main #second_section .second_section_content:nth-child(3) .second_section_content_div:nth-child(3) h4 {
   background-color: #FF8700;
 }
+
+main #third_section {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 5em;
+}
+
+main #third_section .third_section_div {
+  height: 700px;
+  border: 2px solid black;
+}
+
+main #third_section .third_section_div:nth-child(1) {
+  width: 70%;
+}
+
+main #third_section .third_section_div:nth-child(1) div:nth-child(1) {
+  width: 100%;
+  height: 400px;
+  border: 2px solid black;
+}
+
+main #third_section .third_section_div:nth-child(1) div:nth-child(2) {
+  width: 50%;
+  height: 300px;
+  border: 2px solid black;
+  float: left;
+}
+
+main #third_section .third_section_div:nth-child(1) div:nth-child(3) {
+  width: 50%;
+  height: 300px;
+  border: 2px solid black;
+  float: left;
+}
+
+main #third_section .third_section_div:nth-child(2) {
+  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+main #third_section .third_section_div:nth-child(2) div:nth-child(4) {
+  width: 100%;
+  height: 150px;
+  border: 2px solid black;
+}
+
+main #third_section .third_section_div:nth-child(2) div:nth-child(5) {
+  width: 100%;
+  height: 150px;
+  border: 2px solid black;
+}
+
+main #third_section .third_section_div:nth-child(2) div:nth-child(6) {
+  width: 100%;
+  height: 150px;
+  border: 2px solid black;
+}
+
+main #third_section .third_section_div:nth-child(2) div:nth-child(7) {
+  width: 100%;
+  height: 150px;
+  border: 2px solid black;
+  background-color: red;
+}
+
+main #fourth_section {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 4em;
+}
+
+main #fourth_section .fourth_section_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
 /*# sourceMappingURL=styles.css.map */
