--- a/css/styles.scss
+++ b/css/styles.scss
@@ -206,6 +206,87 @@ main {
             }
         }
     }
+
+
+// THIRD SECTION
+    #third_section {
+        width: 80%;
+        display: flex;
+        margin-top: 5em; 
+
+        .third_section_div {
+            height: 700px;
+            border: 2px solid black;        
+        }
+   
+        .third_section_div:nth-child(1) {
+            width: 70%;
+
+            div:nth-child(1) {
+                width: 100%;
+                height: 400px;
+                border: 2px solid black;
+            }
+            div:nth-child(2) {
+                    width: 50%;
+                    height: 300px;
+                    border: 2px solid black;
+                    float: left;  
+            }
+            div:nth-child(3) {
+                width: 50%;
+                height: 300px;
+                border: 2px solid black;
+                float: left;  
+            }
+        }
+
+        .third_section_div:nth-child(2) {
+            width: 30%;
+            display: flex;
+            justify-content: space-around;
+            flex-direction: column;
+
+            div:nth-child(4) {
+                width: 100%;
+                height: 150px;
+                border: 2px solid black;
+            }
+            div:nth-child(5) {
+                width: 100%;
+                height: 150px;
+                border: 2px solid black;
+            }
+            div:nth-child(6) {
+                width: 100%;
+                height: 150px;
+                border: 2px solid black;
+            }
+            div:nth-child(7) {
+                width: 100%;
+                height: 150px;
+                border: 2px solid black;
+                background-color: red;
+            }
+        }
+        
+    } 
+    
+// FOURTH SECTION
+    #fourth_section {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        margin-top: 4em; 
+
+        .fourth_section_content {
+            display: flex;                       
+        }
+
+       
+    }
+
+
 }
 
 
