first page finished

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -8,6 +8,7 @@ $fontColor: #212631;
 $fontColorFooter: #A7B3C6;
 $whiteFontColor: #ffffff;
 $background: #FFFFFF;
+$borderColor: rgb(235, 235, 235);
 
 // font
 $fontFamily: 'Open Sans', sans-serif;
