--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,81 @@
 nav {
-  background-color: grey;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+nav ul {
+  width: 80%;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+}
+
+nav ul li {
+  padding: 2.5em 1.8em;
+  border-right: 1px solid #ebebeb;
+  height: 100%;
+  font-weight: 500;
+}
+
+nav ul li:hover {
+  cursor: pointer;
+}
+
+nav ul li:nth-child(4) {
+  border-bottom: 4px solid #0078FF;
+}
+
+nav ul li:nth-child(5) {
+  border-bottom: 4px solid #4BB92F;
+}
+
+nav ul li:nth-child(6) {
+  border-bottom: 4px solid #FF8700;
+}
+
+nav ul li:nth-child(7) {
+  border-bottom: 4px solid #8D00FF;
+}
+
+nav ul #logo {
+  color: #282C48;
+  font-size: 30px;
+  font-weight: 700;
+  padding: 1em 1em;
+  border-right: 1px solid #ebebeb;
+}
+
+nav ul #logo span {
+  font-weight: 400;
+}
+
+nav ul #logo:hover {
+  cursor: pointer;
+}
+
+nav hr {
+  color: #ebebeb;
+}
+
+nav i {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #282C48;
+  margin-right: 3em;
+}
+
+nav i:hover {
+  cursor: pointer;
 }
 /*# sourceMappingURL=navbar.css.map */
