--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,22 @@
 footer {
-  background-color: grey;
   width: 100%;
-  height: 200px;
+  height: 150px;
   margin-top: 3em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer h3 {
+  color: #212631;
+  opacity: 0.8;
+  font-size: 15px;
+  font-weight: 400;
 }
 /*# sourceMappingURL=footer.css.map */
