--- a/css/footer.scss
+++ b/css/footer.scss
@@ -1,8 +1,18 @@
+@import './variables';
 
 footer {
-    background-color: grey;
     width: 100%;
-    height: 200px;
-
+    height: 150px;
     margin-top: 3em;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+        color: $fontColor;
+        opacity: 0.8;
+        font-size: 15px;
+        font-weight: 400;
+    }
 }
