--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -1,4 +1,74 @@
-nav {
-    background-color: grey;
-    width: 100%;
+@import './variables';
+
+@mixin CursorMouse {
+    cursor: pointer;
 }
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    ul {
+        width: 80%;
+        height: 100px;
+        display: flex;
+        list-style: none;
+
+        li {
+            padding: 2.5em 1.8em;
+            border-right: 1px solid $borderColor;
+            height: 100%; 
+            font-weight: 500; 
+
+            &:hover {
+                @include CursorMouse()
+            }
+        }
+
+        li:nth-child(4){
+            border-bottom: 4px solid $blue;
+        }
+        li:nth-child(5){
+            border-bottom: 4px solid $green;
+        }
+        li:nth-child(6){
+            border-bottom: 4px solid $orange;
+        }
+        li:nth-child(7){
+            border-bottom: 4px solid $purple;
+        }
+       
+        #logo {
+            color: $darkBlue;
+            font-size: 30px;
+            font-weight: 700;
+            padding: 1em 1em;
+            border-right: 1px solid $borderColor;
+
+            span {
+                font-weight: 400;
+            }
+
+            &:hover {
+                @include CursorMouse()
+            }
+        }           
+    } 
+    
+    hr {
+        color: $borderColor;
+    }
+
+    i {
+        display: flex;
+        align-items: center;
+        color: $darkBlue;
+        margin-right: 3em;
+
+        &:hover {
+            @include CursorMouse()
+        }
+    }
+}
+    
