--- a/css/styles.css
+++ b/css/styles.css
@@ -229,81 +229,6 @@ main #second_section .second_section_content:nth-child(3) .second_section_conten
   background-color: #FF8700;
 }
 
-main #third_section {
-  width: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 5em;
-}
-
-main #third_section .third_section_div {
-  height: 700px;
-  border: 2px solid black;
-}
-
-main #third_section .third_section_div:nth-child(1) {
-  width: 70%;
-}
-
-main #third_section .third_section_div:nth-child(1) div:nth-child(1) {
-  width: 100%;
-  height: 400px;
-  border: 2px solid black;
-}
-
-main #third_section .third_section_div:nth-child(1) div:nth-child(2) {
-  width: 50%;
-  height: 300px;
-  border: 2px solid black;
-  float: left;
-}
-
-main #third_section .third_section_div:nth-child(1) div:nth-child(3) {
-  width: 50%;
-  height: 300px;
-  border: 2px solid black;
-  float: left;
-}
-
-main #third_section .third_section_div:nth-child(2) {
-  width: 30%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-main #third_section .third_section_div:nth-child(2) div:nth-child(4) {
-  width: 100%;
-  height: 150px;
-  border: 2px solid black;
-}
-
-main #third_section .third_section_div:nth-child(2) div:nth-child(5) {
-  width: 100%;
-  height: 150px;
-  border: 2px solid black;
-}
-
-main #third_section .third_section_div:nth-child(2) div:nth-child(6) {
-  width: 100%;
-  height: 150px;
-  border: 2px solid black;
-}
-
-main #third_section .third_section_div:nth-child(2) div:nth-child(7) {
-  width: 100%;
-  height: 150px;
-  border: 2px solid black;
-  background-color: red;
-}
-
 main #fourth_section {
   width: 80%;
   display: -webkit-box;
@@ -316,9 +241,134 @@ main #fourth_section {
   margin-top: 4em;
 }
 
+main #fourth_section h2 {
+  color: #212631;
+  font-size: 35px;
+  width: 100%;
+  text-align: center;
+}
+
 main #fourth_section .fourth_section_content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 3.3em 0;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div {
+  width: 350px;
+  height: 300px;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div img {
+  width: 100%;
+  height: 230px;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div img:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.7em 0;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div h4 {
+  color: #ffffff;
+  background-color: #FF8700;
+  font-weight: 500;
+  border-radius: 5px;
+  width: 110px;
+  height: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div h4:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div span {
+  color: #212631;
+  font-weight: 500;
+  font-size: 15px;
+  margin-left: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div a {
+  color: #212631;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div a:hover {
+  text-decoration: underline;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div:nth-child(2) h4 {
+  background-color: #4BB92F;
+}
+
+main #fourth_section .fourth_section_content .fourth_section_content_div:nth-child(3) h4 {
+  background-color: #8D00FF;
+}
+
+main #fourth_section .fourth_section_content:nth-child(3) .fourth_section_content_div:nth-child(1) h4 {
+  background-color: #4BB92F;
+}
+
+main #fourth_section .fourth_section_content:nth-child(3) .fourth_section_content_div:nth-child(2) h4 {
+  background-color: #0078FF;
+}
+
+main #fourth_section .fourth_section_content:nth-child(3) .fourth_section_content_div:nth-child(3) h4 {
+  background-color: #FF8700;
+}
+
+main button {
+  margin: 3.5em 0 3em 0;
+  font-size: 15px;
+  background-color: #212631;
+  border: none;
+  color: #ffffff;
+  padding: 0.6em 2em;
+  border-radius: 2px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+main button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+hr {
+  opacity: 0.3;
 }
 /*# sourceMappingURL=styles.css.map */
