--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,13 +1,5 @@
 @import './variables';
 
-@mixin articlesTitleh4 {
-
-}
-
-@mixin articlesTitleSpan {
-
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -28,7 +20,6 @@ main {
         
         width: 80%;
         margin-top: 2em;    
-        // background: $orange;
     
         .first_section_div {
             width: 600px;
@@ -46,6 +37,7 @@ main {
             .title {
                 display: flex;
             }
+
             h4 {
                 color: #ffffff;
                 background-color: $orange;
@@ -59,6 +51,7 @@ main {
                 align-items: center;
                 justify-content: center;
             }
+
             span {
                 color: $whiteFontColor; 
                 font-weight: 500; 
@@ -69,6 +62,7 @@ main {
                 display: flex;
                 align-items: center;        
             }
+
             h3 {
                 color: $whiteFontColor;
                 text-align: justify;
@@ -83,6 +77,7 @@ main {
         .first_section_div:nth-child(1) {
             background-image: url("../img/img1.jpg");   
         }
+
         .first_section_div:nth-child(2) {
             background-image: url("../img/img5.jpg");
             
@@ -115,7 +110,6 @@ main {
             .second_section_content_div {
                 width: 350px;
                 height: 300px;
-                // border: 2px solid black;
 
                 img {
                     width: 100%;
@@ -181,6 +175,7 @@ main {
                     background-color: $green;
                 }
             }
+
             .second_section_content_div:nth-child(3){
                 h4{
                     background-color: $purple;
@@ -194,11 +189,13 @@ main {
                     background-color: $green;
                 }
             }
+
             .second_section_content_div:nth-child(2){
                 h4{
                     background-color: $blue;
                 }
             }
+
             .second_section_content_div:nth-child(3){
                 h4{
                     background-color: $orange;
@@ -207,70 +204,6 @@ main {
         }
     }
 
-
-// THIRD SECTION
-    #third_section {
-        width: 80%;
-        display: flex;
-        margin-top: 5em; 
-
-        .third_section_div {
-            height: 700px;
-            border: 2px solid black;        
-        }
-   
-        .third_section_div:nth-child(1) {
-            width: 70%;
-
-            div:nth-child(1) {
-                width: 100%;
-                height: 400px;
-                border: 2px solid black;
-            }
-            div:nth-child(2) {
-                    width: 50%;
-                    height: 300px;
-                    border: 2px solid black;
-                    float: left;  
-            }
-            div:nth-child(3) {
-                width: 50%;
-                height: 300px;
-                border: 2px solid black;
-                float: left;  
-            }
-        }
-
-        .third_section_div:nth-child(2) {
-            width: 30%;
-            display: flex;
-            justify-content: space-around;
-            flex-direction: column;
-
-            div:nth-child(4) {
-                width: 100%;
-                height: 150px;
-                border: 2px solid black;
-            }
-            div:nth-child(5) {
-                width: 100%;
-                height: 150px;
-                border: 2px solid black;
-            }
-            div:nth-child(6) {
-                width: 100%;
-                height: 150px;
-                border: 2px solid black;
-            }
-            div:nth-child(7) {
-                width: 100%;
-                height: 150px;
-                border: 2px solid black;
-                background-color: red;
-            }
-        }
-        
-    } 
     
 // FOURTH SECTION
     #fourth_section {
@@ -279,18 +212,129 @@ main {
         flex-direction: column;
         margin-top: 4em; 
 
-        .fourth_section_content {
-            display: flex;                       
-        }
+        h2 {
+            color: $fontColor;
+            font-size: 35px;
+            width: 100%;
+            text-align: center;
+        }   
 
-       
+        .fourth_section_content {
+            display: flex;
+            justify-content: space-between;    
+            margin: 3.3em 0;
+            
+            .fourth_section_content_div {
+                width: 350px;
+                height: 300px;
+
+                img {
+                    width: 100%;
+                    height: 230px;
+                    transition: 0.6s;
+
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.8;
+                    }
+                }
+    
+                .title {
+                    display: flex;
+                    padding: 0.7em 0;
+                }
+
+                h4 {
+                    color: #ffffff;
+                    background-color: $orange;
+                    font-weight: 500;
+        
+                    border-radius: 5px;
+                    width: 110px;
+                    height: 28px;
+        
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    transition: 0.6s;
+
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.6;
+                    }
+                }
+
+                span {
+                    color: $fontColor; 
+                    font-weight: 500; 
+                    font-size: 15px;
+        
+                    margin-left: 1em;
+        
+                    display: flex;
+                    align-items: center;        
+                }
+
+                a {
+                    color: $fontColor; 
+                    text-decoration: none; 
+                    transition: 0.5s;
+                    
+                    &:hover {
+                        text-decoration: underline;
+                    } 
+                }
+            }
+
+            .fourth_section_content_div:nth-child(2){
+                h4{
+                    background-color: $green;
+                }
+            }
+            .fourth_section_content_div:nth-child(3){
+                h4{
+                    background-color: $purple;
+                }
+            }
+        }  
+        
+        .fourth_section_content:nth-child(3) {
+            .fourth_section_content_div:nth-child(1){
+                h4{
+                    background-color: $green;
+                }
+            }
+            .fourth_section_content_div:nth-child(2){
+                h4{
+                    background-color: $blue;
+                }
+            }
+            .fourth_section_content_div:nth-child(3){
+                h4{
+                    background-color: $orange;
+                }
+            }
+        }
     }
 
+    button {
+       margin: 3.5em 0 3em 0;
+       font-size: 15px;
+       background-color: $fontColor;
+       border: none;
+       color: $whiteFontColor;
+       padding: 0.6em 2em;
+       border-radius: 2px;
+       transition: 0.5s;
 
+       &:hover {
+            cursor: pointer;
+            opacity: 0.8;
+       }
+    }
 }
 
-
-
-
-
-
+hr {
+    opacity: 0.3;
+}
